--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
+<!-- ne pas modifier le html et le head -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <title>JavaScript Exercice 3</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="shortcut icon" href="assets/img/Linux-icon.png">
+    <title>Exo3Javascript1</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
+    
+    <!-- START Bootstrap-Cookie-Alert -->
     <div class="container">
-        <h2>Exercice 3</h2>
-        <p>Afficher une boîte de dialogue permettant de saisir son prénom. Afficher dans une boîte de dialogue "Bonjour,
-            " suivi du prénom saisi.</p>
+        <!-- container de la page pour mise en forme bootstrap, ne pas toucher -->
+    
+        <main>
+            <span class="bg-primary">Exercice 3 :
 
-        <div class="form-group">
-            <label>Votre nom:</label>
-            <input type="text" id="myText" class="form-control" placeholder="Entrer votre nom" aria-label="">
-            <div class="valid-feedback">Valid.</div>
-            <div class="input-group-append">
-                <button class="btn btn-success" onclick="myFunction()" type="button">Click the button please</button>
-                <div class="invalid-feedback">Please fill out this field.</div>
-            </div>
-        </div>
+                Afficher une boîte de dialogue permettant de saisir son prénom. Afficher dans une boîte de dialogue "Bonjour, " suivi du prénom saisi.</span>
+            <span class="bg-secondary"></span>
+        </main>
     </div>
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myText").value;
-            alert("Bonjour " + x);
-        }
-    </script>
+    <!-- scripts boostrap -->
+    <script src="js/main.js"></script> <!--  mon script js perso -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+</body>
 
 </html>
